<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pdsd.lab03.phonedialer.PhoneDialerActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="5"
            android:columnCount="3"
             >

            <Button
                android:id="@+id/button1"
                android:layout_gravity="left"
                android:text="@string/button1"
                 />
            <Button
                android:id="@+id/button2"
                android:layout_gravity="left"
                android:text="@string/button2"
                 />
            <Button
                android:id="@+id/button3"
                android:layout_gravity="left"
                android:text="@string/button3"
                 />
            <Button
                android:id="@+id/button4"
                android:layout_gravity="left"
                android:text="@string/button4" />
            <Button
                android:id="@+id/button5"
                android:layout_gravity="left"
                android:text="@string/button5" />
            <Button
                android:id="@+id/button6"
                android:layout_gravity="left"
                android:text="@string/button6" />
            <Button
                android:id="@+id/button7"
                android:layout_gravity="left"
                android:text="@string/button7" />
            <Button
                android:id="@+id/button8"
                android:layout_gravity="left"
                android:text="@string/button8" />
            <Button
                android:id="@+id/button9"
                android:layout_gravity="left"
                android:text="@string/button9" />
            <Button
                android:id="@+id/buttonStar"
                android:layout_gravity="left"
                android:text="@string/buttonStar" />
            <Button
                android:id="@+id/button0"
                android:layout_gravity="left"
                android:text="@string/button0" />
            <Button
                android:id="@+id/buttonHashTag"
                android:layout_gravity="left"
                android:text="@string/buttonHashTag" />
            <Button
                android:id="@+id/buttonCall"
                android:layout_gravity="left"
                android:text="@string/buttonCall" />
            <Button
                android:id="@+id/buttonCancel"
                android:layout_gravity="left"
                android:text="@string/buttonCancel" />
            <Button
                android:id="@+id/buttonBack"
                android:layout_gravity="left"
                android:text="@string/buttonBack" />
            

        </GridLayout>

    </LinearLayout>

</RelativeLayout>
